# bitbtm

./: .env.example  .gitignore  admin_roster.py  alembic.ini  app.py  auth.py  bitbt.db  config.py  database.py  event_imports.py  generate_qualifying_results.py  generate_test_csv.py  google_sheets.py  main.py  matching.py  models.py  plan-robotCombatTournament.prompt.md  public_data.py  pyproject.toml  robot_images.py  scoring.py  ui.py
migrations/: env.py
migrations/versions/: 657d88d002f3_initial_schema.py  f1591a03e726_add_bracket_round_to_matchups.py
plans/: plan-robotArchetypeFallbackImages.prompt.md
routes/: admin.py  auth.py  public.py
static/css/: admin.css  auth.css  base.css  public.css
static/js/: robot-lightbox.js
static/robot-archetypes/: README.md
templates/: base.html
templates/admin/: base.html
templates/admin/events/: add_robot.html  dashboard.html  detail.html  import.html  new.html  retire.html  run_order.html  upload_image.html
templates/admin/partials/: alerts.html  bracket_matchup.html  import_preview.html  macros.html  phase_matchup_item.html  run_order_item.html  status_badge.html  sub_event_matchup.html  topbar.html
templates/admin/phases/: bracket.html  bracket_rearrange.html  (+3 more)
templates/auth/: base.html  login.html
templates/partials/: alerts.html  status_badge.html
templates/public/: base.html  not_found.html
tests/: test_admin_competition_jinja.py  test_admin_qualifying_schedule.py  test_admin_refresh_sheet_ui.py  test_google_sheets_import.py  test_jinja_foundation.py  test_phase6_public.py  test_public.py
(+25 files in other folders)
