[project]
name = "bitbt"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "google-api-python-client>=2.192.0",
    "google-auth-oauthlib>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-fasthtml>=0.12.48",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
]
